# AMON

./: .coveralls.yml  .gitignore  .travis.yml  LICENSE  README.md  environment.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yaml
AMON/: amon.py  extract_ko_genome_from_organism.py  get_kegg_files.py  parse_KEGG.py  predict_metabolites.py
KEGG_parser/: downloader.py  parsers.py
data/: host_ko_list.txt  ko_list.txt  measured_co_list.txt
microMetabPred/: parse_KEGG.py  predict_metabolites.py
scripts/: MicroMetabPred.py  amon.py  extract_ko_genome_from_organism.py
tests/: test_parse_KEGG.py  test_predict_metabolites.py
